--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ font-weight: bold;
 <body>
 <h1>Cinema Classics Movie Reviews</h1>
 <h2>Review: Basketball Dog (2018)</h2>
-<img src="basketballdog.jpg" style="width:100%;height: 5%;">
+<img src="BasketballDog.jpg" style="width:100%;height: 5%;">
 <src="" alt=""/>
 <p>4 out of 5 stars</p>
 <p>From director <b>Vicki Fleming</b> comes the hearthwarming tale of a boy named Pete (trent Dugson) and his dog Rover (voiced by Brinson Lumblebrunt). You may think a boy and his dog learning the true value of friendshiip sounds familiar, but a big twist sets this flick apart: Rover plays Basketball, and he's doggone good at it</p>
